Fix Bedroom wrapping

--- a/src/components/FilterGroup/FilterGroup.scss
+++ b/src/components/FilterGroup/FilterGroup.scss
@@ -79,7 +79,13 @@
       margin-bottom: $grid-gap;
       flex-shrink: 0;
       flex-grow: 1;
-      flex-basis: 25%;
+      flex-basis: 0%;
+
+      @include media-breakpoint-up( large ) {
+        & {
+          flex-basis: 25%;
+        }
+      }
     }
   }
   .ml-filter-group__filters:not(.ml-filter-group__filters--expanded) {
